# hpc-sync

./: .gitignore  README.md  main.py  pyproject.toml
hpc-sync/conf/: config.yaml
hpc_sync/: __init__.py  cli.py  sync.py
hpc_sync/conf/: config.yaml
outputs/2025-03-21/12-50-13/.hydra/: hydra.yaml
outputs/2025-03-21/12-51-00/.hydra/: config.yaml  hydra.yaml
